--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install && chmod ug+x .husky/*"
   },
   "dependencies": {
+	"@cloudflare/next-on-pages": "^1.1.0",								  
     "@metamask/eth-sig-util": "^6.0.0",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "@types/react-dom": "^18.2.17",
@@ -40,7 +41,7 @@
   "devDependencies": {
     "@typechain/ethers-v5": "^11.1.1",
     "@types/node": "^18.16.12",
-    "@types/react": "^18.2.42",
+    "@types/react": "^18.2.6",
     "eslint": "^8.15.0",
     "eslint-config-next": "^14.0.3",
     "cross-env": "^7.0.3",
