add disabledtheme tab

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ NEXT_PUBLIC_CONTRACT_HEARTBREAKER=
 NEXT_PUBLIC_CONTRACT_LOVE_FARM=0xFb063b1ae6471E6795d6ad1FC7f47c1cAb1f3422
 NEXT_PUBLIC_CONTRACT_LOVE=0xB22C05CeDbF879a661fcc566B5a759d005Cf7b4C
 NEXT_PUBLIC_CONTRACT_WAR=0x36d7aA5c67EFd83992fC5CBc488cc2f9Ba7689B8
+NEXT_PUBLIC_LOVESKIN_CONTRACT_ADDRESS=
