--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "jest-worker": "^29.7.0",
     "typechain": "^8.3.1",
     "typescript": "^5.0.4"
+  },
+  "resolutions": {
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.17"
   }
 }
