--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "prepare": "husky install && chmod ug+x .husky/*"
   },
   "dependencies": {
-	"@cloudflare/next-on-pages": "^1.1.0",								  
+    "@cloudflare/next-on-pages": "^1.1.0",
     "@metamask/eth-sig-util": "^6.0.0",
     "@rainbow-me/rainbowkit": "^1.0.1",
+    "@uniswap/widgets": "^0.0.10",
+    "@uniswap/conedison": "^0.0.10",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "ethers": "5",
     "gsap": "^3.12.1",
-    "husky": "^8.0.3",
     "hls.js": "^1.5.11",
+    "husky": "^8.0.3",
     "moment": "^2.29.4",
     "next": "^14.0.3",
     "postcss": "^8.4.23",
@@ -30,9 +32,11 @@
     "react-hotjar": "5",
     "react-icons": "^4.8.0",
     "react-range": "^1.8.14",
+    "react-redux": "^9.1.2",
     "sharp": "^0.33.0",
     "socket.io-client": "^4.7.0",
     "tailwindcss": "^3.3.2",
+    "tslib": "^2.6.3",
     "tw-colors": "^1.2.6",
     "viem": "~0.3.35",
     "wagmi": "^1.0.8"
@@ -41,9 +45,9 @@
     "@typechain/ethers-v5": "^11.1.1",
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.6",
+    "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "eslint-config-next": "^14.0.3",
-    "cross-env": "^7.0.3",
     "jest-worker": "^29.7.0",
     "typechain": "^8.3.1",
     "typescript": "^5.0.4"
