--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "prepare": "husky install && chmod ug+x .husky/*"
   },
   "dependencies": {
-	"@cloudflare/next-on-pages": "^1.1.0",								  
+    "@cloudflare/next-on-pages": "^1.1.0",
     "@metamask/eth-sig-util": "^6.0.0",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
+    "@walletconnect/core": "^2.17.3",
+    "@walletconnect/react-native-dapp": "^1.8.0",
+    "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "bech32": "^2.0.0",
     "ethers": "5",
+    "greenwebjs": "^1.1.9",
     "gsap": "^3.12.1",
-    "husky": "^8.0.3",
     "hls.js": "^1.5.11",
+    "husky": "^8.0.3",
     "moment": "^2.29.4",
     "next": "^14.0.3",
     "postcss": "^8.4.23",
@@ -33,6 +38,7 @@
     "sharp": "^0.33.0",
     "socket.io-client": "^4.7.0",
     "tailwindcss": "^3.3.2",
+    "tslib": "^2.8.1",
     "tw-colors": "^1.2.6",
     "viem": "~0.3.35",
     "wagmi": "^1.0.8"
@@ -41,9 +47,9 @@
     "@typechain/ethers-v5": "^11.1.1",
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.6",
+    "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "eslint-config-next": "^14.0.3",
-    "cross-env": "^7.0.3",
     "jest-worker": "^29.7.0",
     "typechain": "^8.3.1",
     "typescript": "^5.0.4"
